# standup_timer_cli

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml  settings.toml
