[tool.poetry]
name = "standup_cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.11.0"
loguru = "^0.6.0"
art = "^5.8"
dynaconf = "^3.1.11"

[tool.poetry.dev-dependencies]
ruff = "^0.0.246"
yapf = "^0.32.0"
pre-commit = "^3.0.4"
aiohttp = "^3.8.5"
msgpack = "^1.0.4"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.yapf]
COLUMN_LIMIT = 120
